CICO-85659: Mobile PMS; Date fields - Fix for the issue of calendar not visible on mobile

--- a/stylesheets/less/mobile/05-C_plugins.less
+++ b/stylesheets/less/mobile/05-C_plugins.less
@@ -1690,5 +1690,10 @@
             }
 
         }
+        
+        .datepicker-position-absolute {
+            position: absolute;
+            display: block;
+        }
     }
 }
